[gd_scene load_steps=15 format=3 uid="uid://b2l66svymsbhn"]

[ext_resource type="Script" path="res://scenes/GUI/game_over_screen.gd" id="1_p0h60"]
[ext_resource type="Resource" uid="uid://56om27nhd85w" path="res://resources/player_stats.tres" id="2_g2kvi"]
[ext_resource type="Texture2D" uid="uid://crw3lauau5bvi" path="res://scenes/GUI/letter_grades/pngtree-ranking-of-values-png-image_7119408.png" id="2_plnmq"]
[ext_resource type="Script" path="res://scenes/GUI/RestartButton.gd" id="3_2ub8l"]
[ext_resource type="Resource" uid="uid://cw20gxwmi8jhx" path="res://resources/album.tres" id="3_nje0q"]
[ext_resource type="Script" path="res://scenes/GUI/MainMenuButton.gd" id="4_8gt8w"]
[ext_resource type="AudioStream" uid="uid://cpg8bm1haiuxn" path="res://scenes/GUI/letter_grades/1763_button-click-05.mp3" id="6_3fbbr"]
[ext_resource type="AudioStream" uid="uid://dc63vcbgsal2" path="res://scenes/GUI/letter_grades/1001_metal-button-01.mp3" id="7_tm0dw"]
[ext_resource type="Animation" uid="uid://diq5gpmum71at" path="res://scenes/GUI/letter_grades/random_nums.res" id="8_5wcxc"]
[ext_resource type="AudioStream" uid="uid://y82h65f7g4w" path="res://1001_metal-button-01.mp3" id="10_sypq2"]
[ext_resource type="AudioStream" uid="uid://dw47cnl7frjtx" path="res://audio/(short) Yippee sound effect!!.mp3" id="10_tr6yr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlukp"]
bg_color = Color(0.317647, 0.317647, 0.317647, 1)

[sub_resource type="Animation" id="Animation_cgvd6"]
resource_name = "show_grade"
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Audio/show_grade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.911866,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.911866,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.911866,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.911866,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.911866,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.911866,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.911866,
"start_offset": 0.0,
"stream": ExtResource("6_3fbbr")
}, {
"end_offset": 0.317023,
"start_offset": 0.0,
"stream": ExtResource("7_tm0dw")
}],
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.776061)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/GradeContainer/SpriteContainer/GradeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 3, 8, 5, 1, 6, 3, 7]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_letter_grade"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/HBoxContainer/GradeContainer/SpriteContainer/GradeSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1e-05),
"update": 1,
"values": [Color(0.282353, 0.282353, 0.282353, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8dphu"]
_data = {
"random_nums": ExtResource("8_5wcxc"),
"show_grade": SubResource("Animation_cgvd6")
}

[node name="GameOverScreen" type="CanvasLayer" node_paths=PackedStringArray("grade_sprite")]
script = ExtResource("1_p0h60")
grade_sprite = NodePath("MarginContainer/HBoxContainer/GradeContainer/SpriteContainer/GradeSprite")
stats = ExtResource("2_g2kvi")
album = ExtResource("3_nje0q")

[node name="DimSizing" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="BackgroundDim" type="ColorRect" parent="DimSizing"]
layout_mode = 2
color = Color(0, 0, 0, 0.764706)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.62
theme_override_constants/separation = 15

[node name="FinishedLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "LUNCH FINISHED"

[node name="TimeLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "Time: "

[node name="EatenLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "Lunch Eaten: "

[node name="PhotographedLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
text = "Birds Photographed"

[node name="PidgeonLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pidgeon: "

[node name="SeagullLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Seagull: "

[node name="ChildLabel" type="Label" parent="MarginContainer/HBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Child: "

[node name="GradeContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpriteContainer" type="Control" parent="MarginContainer/HBoxContainer/GradeContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 3.65

[node name="GradeSprite" type="Sprite2D" parent="MarginContainer/HBoxContainer/GradeContainer/SpriteContainer"]
modulate = Color(0.282353, 0.282353, 0.282353, 1)
scale = Vector2(2.43333, 2.43333)
texture = ExtResource("2_plnmq")
hframes = 3
vframes = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/GradeContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_rlukp")
text = "Restart"
script = ExtResource("3_2ub8l")

[node name="MainMenuButton" type="Button" parent="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_rlukp")
text = "Main Menu"
script = ExtResource("4_8gt8w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8dphu")
}

[node name="Audio" type="Node" parent="."]

[node name="show_grade" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_sypq2")
volume_db = 1.5

[node name="shuffle_grade" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_3fbbr")

[node name="YIPPEE" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_tr6yr")
volume_db = -4.457

[connection signal="button_up" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" method="_on_button_up"]
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" method="_on_focus_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/RestartButton" method="_on_mouse_exited"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" method="_on_button_up"]
[connection signal="focus_entered" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" method="_on_focus_exited"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" to="MarginContainer/HBoxContainer/GradeContainer/HBoxContainer/MainMenuButton" method="_on_mouse_exited"]
